tests/dependencies/cycle.sy
a :: b
b :: a

start :: fn {
    <!>
}

// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
